--- a/equipes/volleyball-garcons-senior.html
+++ b/equipes/volleyball-garcons-senior.html
@@ -5,17 +5,17 @@
 <script data-gage-theme-init="true">(function(){try{var t=localStorage.getItem("gage-theme");if(!t){t=(window.matchMedia&&window.matchMedia("(prefers-color-scheme: dark)").matches)?"dark":"light";}if(t==="dark"){document.documentElement.classList.add("dark-mode");}}catch(e){}})();</script>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Volleyball — Garçons Senior | École secondaire Gaétan‑Gervais</title>
-<link href="../assets/img/favicon.png" rel="icon"/>
-<link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon"/>
+<link href="/ESGAGE/assets/img/favicon.png" rel="icon"/>
+<link href="/ESGAGE/assets/img/apple-touch-icon.png" rel="apple-touch-icon"/>
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800&family=Poppins:ital,wght@0,400;0,500;0,600;0,700&family=Raleway:ital,wght@0,400;0,600;0,700;0,800&display=swap" rel="stylesheet"/>
-<link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
-<link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet"/>
-<link href="../assets/vendor/aos/aos.css" rel="stylesheet"/>
-<link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet"/>
-<link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"/>
-<link href="../assets/css/main.css" rel="stylesheet"/>
+<link href="/ESGAGE/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+<link href="/ESGAGE/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet"/>
+<link href="/ESGAGE/assets/vendor/aos/aos.css" rel="stylesheet"/>
+<link href="/ESGAGE/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet"/>
+<link href="/ESGAGE/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"/>
+<link href="/ESGAGE/assets/css/main.css" rel="stylesheet"/>
 <style>
   /* ── Section titles ── */
   .section-tab-title {
@@ -106,7 +106,7 @@
 </head>
 <body class="starter-page-page">
 <div id="header-placeholder"></div>
-<script src="../assets/js/include-header.js"></script>
+<script src="/ESGAGE/assets/js/include-header.js"></script>
 <main class="main">
 
   <div class="page-title" data-aos="fade">
@@ -115,7 +115,7 @@
         <div class="row d-flex justify-content-center text-center">
           <div class="col-lg-8">
             <div style="font-size:48px;line-height:1;margin-bottom:10px;">
-              <img src="../assets/img/sportslogos/volleyball.png" alt="Volleyball" style="width:64px;height:64px;object-fit:contain;"/>
+              <img src="/ESGAGE/assets/img/sportslogos/volleyball.png" alt="Volleyball" style="width:64px;height:64px;object-fit:contain;"/>
             </div>
             <h1>Volleyball — Garçons Senior</h1>
             <p class="mb-0">Effectif, calendrier et classement HSSAA.</p>
@@ -126,8 +126,8 @@
     <nav class="breadcrumbs">
       <div class="container">
         <ol>
-          <li><a href="../index.html">Accueil</a></li>
-          <li><a href="../athletisme.html">Sports</a></li>
+          <li><a href="/ESGAGE/index.html">Accueil</a></li>
+          <li><a href="/ESGAGE/athletisme.html">Sports</a></li>
           <li class="current">Volleyball Garçons Senior</li>
         </ol>
       </div>
@@ -137,7 +137,7 @@
   <section class="section">
     <div class="container" data-aos="fade-up">
 
-      <a class="back-link" href="../athletisme.html"><i class="bi bi-arrow-left"></i> Retour aux sports</a>
+      <a class="back-link" href="/ESGAGE/athletisme.html"><i class="bi bi-arrow-left"></i> Retour aux sports</a>
 
       <!-- ══ EFFECTIF ══════════════════════════════════════════════════════ -->
       <div class="mb-5 mt-3">
@@ -174,20 +174,20 @@
 
 </main>
 <div id="footer-placeholder"></div>
-<script src="../assets/js/include-footer.js"></script>
+<script src="/ESGAGE/assets/js/include-footer.js"></script>
 <a class="scroll-top d-flex align-items-center justify-content-center" href="#" id="scroll-top"><i class="bi bi-arrow-up-short"></i></a>
 <div id="preloader"></div>
-<script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="../assets/vendor/php-email-form/validate.js"></script>
-<script src="../assets/vendor/aos/aos.js"></script>
-<script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
-<script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
-<script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
-<script src="../assets/js/main.js"></script>
+<script src="/ESGAGE/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="/ESGAGE/assets/vendor/php-email-form/validate.js"></script>
+<script src="/ESGAGE/assets/vendor/aos/aos.js"></script>
+<script src="/ESGAGE/assets/vendor/glightbox/js/glightbox.min.js"></script>
+<script src="/ESGAGE/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+<script src="/ESGAGE/assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="/ESGAGE/assets/js/main.js"></script>
 
 <script>
 // ── Data file for this team ──────────────────────────────────────────────
-const DATA_FILE = "../assets/data/sports/volleyball-garcons-senior.json";
+const DATA_FILE = "/ESGAGE/assets/data/sports/volleyball-garcons-senior.json";
 const MY_SCHOOL_KEYWORDS = ["gaétan", "gervais", "gage", "g.g"];
 
 // ── Render scores / schedule ─────────────────────────────────────────────
