--- a/equipes/volleyball-garcons-senior.html
+++ b/equipes/volleyball-garcons-senior.html
@@ -177,25 +177,22 @@
     text-transform: uppercase;
   }
 
-  /* ── Captain crown badge ── */
+  /* ── Captain C badge ── */
   .captain-badge {
     position: absolute;
     top: 12px; left: 12px;
     z-index: 5;
-    width: 32px; height: 32px;
+    width: 28px; height: 28px;
     background: linear-gradient(135deg, #f9a825, #f57f17);
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0 2px 12px rgba(249,168,37,0.7);
-    animation: captainPulse 2.5s ease-in-out infinite;
-    font-size: 15px;
+    box-shadow: 0 2px 10px rgba(249,168,37,0.6);
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 16px;
+    color: #fff;
     line-height: 1;
-  }
-  @keyframes captainPulse {
-    0%,100% { box-shadow: 0 2px 12px rgba(249,168,37,0.7); }
-    50%      { box-shadow: 0 2px 24px rgba(249,168,37,1); }
   }
 
   @keyframes cardIn {
@@ -349,7 +346,7 @@ PLAYERS.forEach((p, i) => {
     <img class="card-photo" src="${IMG_BASE}${p.img}" alt="${p.name}" loading="lazy"/>
     <div class="card-overlay"></div>
     <div class="card-school">GAGE</div>
-    ${p.captain ? `<div class="captain-badge" title="Capitaine">👑</div>` : ""}
+    ${p.captain ? `<div class="captain-badge" title="Capitaine">C</div>` : ""}
     <div class="card-info">
       <div class="card-position">${p.position}</div>
       <div class="card-name">${p.name}</div>
